[package]
name = "ruin-injector"
version = "1.2.1"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"

[build-dependencies]
winres = "0.1"
